# Data-Intelligence-SDK

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
data/parsed/documents/: naph_lap_10ar_v1_0_golden_jubilee_for_web.md
data_parsed/documents/: naph_10ar_main_report.md  naph_10ar_supplementary_survival_analysis.md  naph_lap_10ar_v1_0_imperial_for_web.md  naph_lap_10ar_v1_0_newcastle_for_web.md  naph_lap_10ar_v1_0_royal_brompton_for_web.md  naph_lap_10ar_v1_0_sheffield_for_web.md
data_raw/: NAPH 10AR - Main Report - Tables and Charts (Excel).xlsx  NAPH 10AR - Open Data - Specification.csv  NAPH 10AR - Supplementary Survival Analysis - Tables and Charts (Excel).xlsx
examples/: run_pipeline.py
src/data_intelligence/: __init__.py
src/data_intelligence/context/: user_context.py
src/data_intelligence/core/: pipeline.py  types.py
src/data_intelligence/datahub/: __init__.py  catalog.py
src/data_intelligence/engines/: __init__.py  base.py  custom.py  python.py  rag.py  sql.py  workflow.py
src/data_intelligence/evidence/: __init__.py  collector.py
src/data_intelligence/intent/: analyzer.py
src/data_intelligence/registry/: engine_registry.py
src/data_intelligence/runtime/: __init__.py  cache.py  (+2 more)
src/data_intelligence_sdk/: __init__.py
tests/: test_core_types.py  test_csv_methods.py  test_datahub_catalog.py  test_default_components.py  test_engine_runtime_context.py  test_general_purpose_engine.py  test_interface_registry.py  test_method_hub.py  test_pipeline_workflow.py  test_public_imports.py  test_registry_fallback.py  test_run_pipeline_example.py
(+51 files in other folders)
