[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "data-intelligence"
version = "0.1.0"
description = "Base package skeleton for a data intelligence engine orchestration platform."
requires-python = ">=3.10"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]
