[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "data-intelligence-sdk"
version = "0.1.0"
description = "Base package skeleton for a data intelligence engine orchestration platform."
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "langchain>=1.3.11",
    "langchain-openai>=1.3.3",
]

[tool.setuptools.packages.find]
where = ["src"]
